--- a/style.css
+++ b/style.css
@@ -15,28 +15,151 @@ body
   right: 0px;
 }
 .css-prog-title-div
-{ flex:2;
+{ height: 500px;
   display: flex;
-  flex-direction: column;
-  background-color: green;
+  flex-direction: row;
+  background-color: lightcoral;
+  align-items: center;
+  justify-content: end;
 }
 .css-task-box-div
 { 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   border-style: dashed;
   border-width: 5px;
   height: 750px;
 }
 
-.css-add-task-btn,.css-task-btn
+.css-add-task-btn,.css-task-btn,.css-task-completed
+{  
+  flex:1;
+  height: 300px;
+  font-size:20px; 
+  margin:20px 25px 20px 25px;
+  border-style:dashed;
+  border-color: aqua;
+  border-width: 2px;
+}
+.css-done
 {
   margin:25px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  width: 850px;
-  height: 300px;
-  font-size:20px;
+  font-size: 20px;
+  padding: 10px 12px;
+}
+.css-task-completed
+{
+  border-color: greenyellow;
+  color:black;
+  background-color: lightgreen;
+}
+.css-overlay
+{
+  position: absolute;
+  top:30px;
+  bottom: 30px;
+  left:300px;
+  right: 300px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
+  z-index: 2;
+}
+.css-user-ip
+{
+  position: absolute;
+  top:30px;
+  bottom: 30px;
+  left:300px;
+  right: 300px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 30px;
+  z-index: 2;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-content: center;
+}
+.css-task-ip
+{
+  margin:50px;
+  height: 50px;
+  font-size: 20px;
+  border-style: dotted;
+  border-width: 5px;
+  border-color: black;
+  border-radius: 50px;
+  padding-left: 50px;
+}
+.css-task-ip::placeholder
+{
+  
+  color:palevioletred
+}
+.css-task-ip:focus
+{
+  outline: none;
+}
+.css-task-ok
+{
+  margin:25px 50px 0px 50px; 
+  height: 50px;
+  font-size: 20px;
+  border-style: none;
+  border-radius: 50px;
+}
+.css-close-overlay
+{
+  animation:cubic-bezier(0.23, 1, 0.320, 1) 2s;
+  position: absolute;
+  top:100%;
+  bottom: 100%;
+  left:100%;
+  right:100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
+  z-index: 2;
+}
+.css-progress-bar-div
+{
+  position: relative;
+  border-radius: 50%;
+  height: 250px;
+  width: 250px;
+  margin-right: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: conic-gradient(#2fbaff 3.6deg, #fff 0deg);
+}
+.css-progress-bar-div::before
+{
+  z-index: 3;
+  position: absolute;
+  content: "";
+  border-radius: 50%;
+  height: 220px;
+  width: 220px;
+  background-color:black
+}
+.css-progress-bar-div-ptr
+{
+  position: relative;
+  z-index:2;
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+  background:conic-gradient(from 2deg,transparent 99%,#ff0000 1%);
+}
+@media(min-width: 750px)
+{
+   .css-task-box-div
+  { 
+    display: flex;
+    flex-direction: column;
+    border-style: dashed;
+    border-width: 5px;
+    height: 750px;
+    min-width:750px;
+  }
+
 }
